@@ -2,7 +2,7 @@
 #  Assassin configuration
 #  for more information check
 #  http://dev.bukkit.org/server-mods/assassin/
-#################################################
+#  
 General:
   debug_mode_enabled: false
   stats_tracking_enabled: true
@@ -14,3 +14,5 @@ Assassin:
   warn_others_when_near: true
   return_mask: false
   prevent_neutral_pvp: true
+  particle_effects: true
+  warn_time_almost_up: 10
