@@ -4,6 +4,7 @@ import me.TfT02.Assassin.Assassin;
 import me.TfT02.Assassin.util.ItemChecks;
 import me.TfT02.Assassin.util.PlayerData;
 
+import org.bukkit.Effect;
 import org.bukkit.Material;
 import org.bukkit.entity.AnimalTamer;
 import org.bukkit.entity.Entity;
@@ -14,9 +15,6 @@ import org.bukkit.event.EventHandler;
 import org.bukkit.event.EventPriority;
 import org.bukkit.event.Listener;
 import org.bukkit.event.entity.EntityDamageByEntityEvent;
-import org.bukkit.event.entity.EntityDamageEvent;
-import org.bukkit.inventory.ItemStack;
-import org.bukkit.inventory.PlayerInventory;
 
 public class EntityListener implements Listener {
 
@@ -71,30 +69,10 @@ public class EntityListener implements Listener {
 				if (data.bothNeutral(defendingPlayer, (Player) attacker)) {
 					event.setCancelled(true);
 					return;
-				}
-			}
-		}
-	}
-	@EventHandler(priority = EventPriority.NORMAL, ignoreCancelled = true)
-	public void onEntityDamage (EntityDamageEvent event) {
-		Entity defender = event.getEntity();
-		int damage = event.getDamage();
-
-		if (damage <= 0) return;
-
-		if (defender instanceof Player) {
-			Player defendingPlayer = (Player) defender;
-
-			if (!defendingPlayer.isOnline()) {
-				return;
-			}
-
-			if (defendingPlayer.getHealth() <= 0) {
-				PlayerInventory inventory = defendingPlayer.getInventory();
-				ItemStack itemHead = inventory.getHelmet();
-				if (itemHead == null) return;//TODO FIX for NPE - Event is fired even when player has already died, hmm what to do?
-				if (itemcheck.isMask(itemHead)) {
-					inventory.setHelmet(new ItemStack(Material.AIR));
+				} else {
+					if (Assassin.getInstance().getConfig().getBoolean("Assassin.particle_effects")) {
+						defendingPlayer.getWorld().playEffect(defendingPlayer.getLocation(), Effect.STEP_SOUND, Material.REDSTONE_WIRE);
+					}
 				}
 			}
 		}
