@@ -5,6 +5,7 @@ import me.TfT02.Assassin.AssassinMode;
 import me.TfT02.Assassin.util.PlayerData;
 
 import org.bukkit.Bukkit;
+import org.bukkit.Effect;
 import org.bukkit.entity.Player;
 
 public class ActiveTimer implements Runnable {
@@ -37,11 +38,19 @@ public class ActiveTimer implements Runnable {
 		for (Player players : Bukkit.getServer().getOnlinePlayers()) {
 			long activetime = data.getActiveTime(players);
 			long maxactivetime = Assassin.getInstance().getConfig().getLong("Assassin.active_length");
+			long warntime = Assassin.getInstance().getConfig().getLong("Assassin.warn_time_almost_up");
 			if (activetime >= maxactivetime) {
 				if (data.isAssassin(players)) {
 					assassin.deactivateAssassin(players);
 					data.resetActiveTime(players);
 					if (plugin.debug_mode) System.out.println(players + " status set to Neutral. Active time reached max.");
+				}
+			} else if (Assassin.getInstance().getConfig().getBoolean("Assassin.particle_effects")) {
+				if (activetime + warntime >= maxactivetime) {
+					if (data.isAssassin(players)) {
+						players.getWorld().playEffect(players.getLocation(), Effect.MOBSPAWNER_FLAMES, 1);
+						if (plugin.debug_mode) System.out.println(players + " has received a warning because his Assassin mode is running out.");
+					}
 				}
 			}
 		}
